GNOME Bugzilla – Bug 738165
trying to add a printer crashes system settings
Last modified: 2014-11-13 11:24:31 UTC
Created attachment 288062 [details] backtrace No local network printers get detected, upon typing in the URI, settings crashed with the following backtrace.
Hi Jakub, I can not reproduce the problem. What URI have you entered there? Maybe it is related to its format. Could you try to crash it again with debuginfo installed?
//zeus
I have updated F21 testing in the meantime and the printer is actually autodetected now. Still crashing though. Will attach the backtrace with debuginfo installed.
Created attachment 288169 [details] 1 gigabyte download later, BT with debuginfo
Btw setting up the autodetected printer fails unless you explicitly install the splix package: http://youtu.be/HthEZL_ew6U
Created attachment 288197 [details] [review] Don't crash for URIs with leading "//" (In reply to comment #2) > //zeus Thank you for the URI. It helped me to reproduce the problem. The crash was caused by an uninitialized value in function which searches for LPD printers. The attached patch initialize it early so that it doesn't crash now.
Review of attachment 288197 [details] [review]: Looks fine
Comment on attachment 288197 [details] [review] Don't crash for URIs with leading "//" (In reply to comment #7) > Review of attachment 288197 [details] [review]: > > Looks fine Thank you for the review. I've pushed the patch to master.
I'll look at the problem from comment #5 later.
(In reply to comment #9) > I'll look at the problem from comment #5 later. The problem is a bug in foomatic. I've filled a bug for it here: https://bugzilla.redhat.com/show_bug.cgi?id=1163731. I'm closing this one then.